# app-django

./: .coveragerc  .dockerignore  .eslintrc.json  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  example.env  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pytest.ini  tsconfig.json
.github/workflows/: build.yml
api/: views.py
app/: factory.py  middlewares.py  types.py
app-django/api/: models.py  serializers.py  urls.py  views.py
app-django/frontend/: .dockerignore  Dockerfile  package.json  urls.py
app-django/music_app/: settings.py  urls.py
app-django/spotify/: models.py  urls.py  utils.py  views.py
app/backend/: factory.py  models.py
app/db/: config.py  models.py  utils.py
app/frontend/: .dockerignore  Dockerfile  package.json  tsconfig.json  webpack.config.js
app/routers/: api.py  frontend.py  spotify.py  utils.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  middlewares.py  types.py  utils.py
backend/app/db/: config.py  models.py  utils.py
backend/app/db/migrations/: alembic.ini  env.py
backend/app/db/migrations/versions/: 167ad6748adf_initial.py  c938470e3cad_initial.py
backend/app/routers/: api.py  spotify.py  utils.py
backend/app/routers/main/: __init__.py  types.py
backend/app/routers/room/: __init__.py  types.py
backend/app/routers/spotify/: __init__.py  config.py  types.py  utils.py
backend/app/routers/spotify/auth/: __init__.py  types.py
backend/scripts/: check_postgres.py  poetry_install.sh  wait_for_postgres.sh
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  webpack.config.cjs
frontend/src/: config.ts  index.html  index.tsx
music_app/: settings.py  urls.py
music_app/api/: models.py  urls.py  views.py
scripts/: check_code.sh  deploy.sh  django_setup.sh  pipenv_install.sh  test.sh
src/: middleware.ts  types.ts
src/app/: layout.tsx  (+2 more)
tests/: test_frontend.py
(+112 files in other folders)
